--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react_rhythme_finder",
   "version": "0.1.0",
   "private": true,
-  "homepage": "umich-events-complete",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
